--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!-- navbar start  -->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container">
-                <a class="navbar-brand" id="goToHome">Meal App</a>
+                <a class="navbar-brand" href="./index.html"  id="goToHome">Meal App</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -34,10 +34,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link " aria-current="page" id="homepage">Home</a>
+                            <a class="nav-link " aria-current="page" href="./index.html" id="homepage">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" id="favouritepage" >Favourite</a>
+                            <a class="nav-link" id="favouritepage" href="./favourite.html" >Favourite</a>
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
